fix(frontend): padding shift on focus

--- a/packages/frontend/components/input/styles.css
+++ b/packages/frontend/components/input/styles.css
@@ -14,6 +14,9 @@
     border-width: var(--input-border-width-focus);
     inset-block-start: calc(var(--input-border-width-focus-offset) * -1);
     margin-block-end: calc(var(--input-border-width-focus-offset) * -1);
+    padding-inline-start: calc(
+      var(--space-s) - var(--input-border-width-focus-offset)
+    );
   }
 
   &[readonly] {
